Fixed sidebar navigation when collapsed

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -134,6 +134,7 @@
 
 .collapseMenuItem {
   display: none;
+  transform: rotate(180deg);
 
   @media (min-width: breakpoint.$desktop) {
     display: flex;
